--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 unbind C-b
 set-option -g history-limit 100000
 set-option -g prefix C-j
+set -sg escape-time 0
 bind-key C-j send-prefix
 bind h split-window -h
 bind j split-window -v
