--- a/alacritty.yml
+++ b/alacritty.yml
@@ -747,29 +747,30 @@ key_bindings:
   # Print all received window events.
   #print_events: false
 colors:
-  # Default colors
+  name: hund
+  author: hund
   primary:
-    background: '#263238'
-    foreground: '#eeffff'
-
-  # Normal colors
+    background: "#161616"
+    foreground: "#FFFFFF"
+  cursor:
+    text: "#161616"
+    cursor: "#FFFFFF"
   normal:
-    black: '#000000' # Arbitrary
-    red: '#e53935'
-    green: '#91b859'
-    yellow: '#ffb62c'
-    blue: '#6182b8'
-    magenta: '#ff5370' # Dark pink of the original material theme
-    cyan: '#39adb5'
-    white: '#a0a0a0' # Arbitrary
-
-  # Bright colors
+    black: "#222222"
+    red: "#E84F4F"
+    green: "#B7CE42"
+    yellow: "#FEA63C"
+    blue: "#66AABB"
+    magenta: "#B7416E"
+    cyan: "#6D878D"
+    white: "#DDDDDD"
   bright:
-    black: '#4e4e4e' # Arbitrary
-    red: '#ff5370'
-    green: '#c3e88d'
-    yellow: '#ffcb6b'
-    blue: '#82aaff'
-    magenta: '#f07178' # Pink of the original material theme
-    cyan: '#89ddff'
-    white: '#ffffff' # Arbitrary
+    black: "#666666"
+    red: "#D23D3D"
+    green: "#BDE077"
+    yellow: "#FFE863"
+    blue: "#AACCBB"
+    magenta: "#E16A98"
+    cyan: "#42717B"
+    white: "#CCCCCC"
+theme: Hund
