synchronized nvim and tmux colors with alacritty belge
Should be a color scheme variable to control system
colors instead of this

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,7 @@ unbind C-b
 set-option -g history-limit 100000
 set-option -g prefix C-j
 set -sg escape-time 0
+set -g status-bg colour14
 bind-key C-j send-prefix
 bind h split-window -h
 bind j split-window -v
