minimalize tmux colors since hard to sync

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,9 @@ unbind C-b
 set-option -g history-limit 100000
 set-option -g prefix C-j
 set -sg escape-time 0
-set -g status-bg colour14
+# https://michurin.github.io/xterm256-color-picker/
+set -g status-bg colour237
+set -g status-style bg=colour236,fg=colour255
 bind-key C-j send-prefix
 bind h split-window -h
 bind j split-window -v
