--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,7 @@ bind h split-window -h
 bind j split-window -v
 unbind '"'
 unbind %
+bind-key -r i run-shell "tmux display-popup -h80% -w60% -E 'cht.sh --shell'"
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
