hyprland - refine config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,6 +12,7 @@ exec-once = systemctl --user restart pipewire
 #exec-once = gBar bar 0
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = hyprpaper
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
@@ -31,7 +32,7 @@ general {
   gaps_in=2
   gaps_out=2
   border_size=1
-  col.active_border=0xff7D4045
+  col.active_border=0xff2962FF
   col.inactive_border=0xff382D2E
   no_border_on_floating = false
   layout = dwindle
@@ -47,6 +48,10 @@ misc {
   vfr = true
   enable_swallow = true
   swallow_regex = ^(wezterm)$
+}
+
+binds {
+  allow_workspace_cycles = true
 }
 
 # █▀▄ █▀▀ █▀▀ █▀█ █▀█ ▄▀█ ▀█▀ █ █▀█ █▄░█
@@ -101,7 +106,7 @@ animations {
   animation = border, 1, 10, default
   animation = fade, 1, 10, smoothIn
   animation = fadeDim, 1, 10, smoothIn
-  animation = workspaces, 1, 6, default
+  animation = workspaces, 1, 2, default
 
 }
 
@@ -147,6 +152,7 @@ windowrule = float, title:^(Picture-in-Picture)$
 windowrule = size 800 600, title:^(Volume Control)$
 windowrule = move 75 44%, title:^(Volume Control)$
 windowrule = opacity 0.92, Thunar
+windowrule = float, title:^(JW personal notifications)$
 
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀
@@ -156,15 +162,14 @@ windowrule = opacity 0.92, Thunar
 
 bind = SUPER, v, exec, wf-recorder -f $(xdg-user-dir VIDEOS)/$(date +'%H:%M:%S_%d-%m-%Y.mp4')
 bind = SUPER SHIFT, v, exec, killall -s SIGINT wf-recorder
-bind = SUPER, I, exec, ~/scripts/notification_dash.sh | python ~/scripts/jwqtnotify.py
+bind = SUPER, A, exec, ~/scripts/notification_dash.sh | python ~/scripts/jwqtnotify.py
 bind = SUPER, S, exec, flameshot gui
 
 # █▀▄▀█ █ █▀ █▀▀
 # █░▀░█ █ ▄█ █▄▄
 bind = SUPER SHIFT, L, exec, swaylock
 bind = SUPER, Return, exec, alacritty
-bind = SUPER, E, exec, thunar
-bind = SUPER, P, exec, wofi --show drun -I -m -i
+bind = SUPER, F, exec, wofi --show drun -I -m -i
 bind = SUPER, C, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind = SUPER, period, exec, wofi-emoji
 #bind = SUPER, D, exec, killall rofi || rofi -show drun -theme ~/.config/rofi/global/rofi.rasi
@@ -177,8 +182,8 @@ binde = CTRL ALT, period, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
 
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀▄▀█ ▄▀█ █▄░█ ▄▀█ █▀▀ █▀▄▀█ █▀▀ █▄░█ ▀█▀
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █░▀░█ █▀█ █░▀█ █▀█ █▄█ █░▀░█ ██▄ █░▀█ ░█░
-bind = SUPER, Q, killactive,
-bind = SUPER SHIFT, Q, exit,
+bind = SUPER, ESCAPE, killactive,
+bind = SUPER SHIFT, ESCAPE, exit,
 bind = SUPER, F, fullscreen,
 bind = SUPER, Space, togglefloating,
 bind = SUPER, -, pseudo, # dwindle
@@ -200,10 +205,10 @@ bind = SUPER SHIFT, down, movewindow, d
 
 # █▀█ █▀▀ █▀ █ ▀█ █▀▀
 # █▀▄ ██▄ ▄█ █ █▄ ██▄
-bind = SUPER, h, resizeactive, -20 0
-bind = SUPER, l, resizeactive, 20 0
-bind = SUPER CTRL, up, resizeactive, 0 -20
-bind = SUPER CTRL, down, resizeactive, 0 20
+bind = SUPER, h, resizeactive, -50 0
+bind = SUPER, l, resizeactive, 50 0
+bind = SUPER CTRL, up, resizeactive, 0 -50
+bind = SUPER CTRL, down, resizeactive, 0 50
 
 # ▀█▀ ▄▀█ █▄▄ █▄▄ █▀▀ █▀▄
 # ░█░ █▀█ █▄█ █▄█ ██▄ █▄▀
@@ -218,33 +223,29 @@ bind = SUPER, n, exec, hyprctl dispatch centerwindow
 
 # █▀ █░█░█ █ ▀█▀ █▀▀ █░█
 # ▄█ ▀▄▀▄▀ █ ░█░ █▄▄ █▀█
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER, 6, workspace, 6
-bind = SUPER, 7, workspace, 7
-bind = SUPER, 8, workspace, 8
-bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
-bind = SUPER, X, workspace, e+1
-bind = SUPER, Z, workspace, e-1
+bind = SUPER, Q, workspace, 1
+bind = SUPER, W, workspace, 2
+bind = SUPER, E, workspace, 3
+bind = SUPER, R, workspace, 4
+bind = SUPER, T, workspace, 5
+bind = SUPER, Y, workspace, 6
+bind = SUPER, U, workspace, 7
+bind = SUPER, I, workspace, 8
+bind = SUPER, O, workspace, 9
+bind = SUPER, P, workspace, 0
 
 # █▀▄▀█ █▀█ █░█ █▀▀
 # █░▀░█ █▄█ ▀▄▀ ██▄
-bind = SUPER SHIFT, 1, movetoworkspace, 1
-bind = SUPER SHIFT, 2, movetoworkspace, 2
-bind = SUPER SHIFT, 3, movetoworkspace, 3
-bind = SUPER SHIFT, 4, movetoworkspace, 4
-bind = SUPER SHIFT, 5, movetoworkspace, 5
-bind = SUPER SHIFT, 6, movetoworkspace, 6
-bind = SUPER SHIFT, 7, movetoworkspace, 7
-bind = SUPER SHIFT, 8, movetoworkspace, 8
-bind = SUPER SHIFT, 9, movetoworkspace, 9
-bind = SUPER SHIFT, 0, movetoworkspace, 10
-bind = SUPER SHIFT, X, movetoworkspace, e+1
-bind = SUPER SHIFT, Z, movetoworkspace, e-1
+bind = SUPER SHIFT, Q, movetoworkspace, 1
+bind = SUPER SHIFT, W, movetoworkspace, 2
+bind = SUPER SHIFT, E, movetoworkspace, 3
+bind = SUPER SHIFT, R, movetoworkspace, 4
+bind = SUPER SHIFT, T, movetoworkspace, 5
+bind = SUPER SHIFT, Y, movetoworkspace, 6
+bind = SUPER SHIFT, U, movetoworkspace, 7
+bind = SUPER SHIFT, I, movetoworkspace, 8
+bind = SUPER SHIFT, O, movetoworkspace, 9
+bind = SUPER SHIFT, P, movetoworkspace, 10
 
 # █▀▄▀█ █▀█ █░█ █▀ █▀▀   █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀
 # █░▀░█ █▄█ █▄█ ▄█ ██▄   █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█
