--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,6 +22,8 @@ monitor = DP-1,2560x1440@144,0x0,1
 # █ █░▀█ █▀▀ █▄█ ░█░
 input {
   kb_layout = fi
+  repeat_rate = 35
+  repeat_delay = 200
   follow_mouse = 1
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
