wofi - fix animation and color

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -155,6 +155,7 @@ windowrule = size 800 600, title:^(Volume Control)$
 windowrule = move 75 44%, title:^(Volume Control)$
 windowrule = opacity 0.92, Thunar
 windowrule = float, title:^(JW personal notifications)$
+layerrule =  noanim, wofi
 
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀
@@ -171,7 +172,7 @@ bind = SUPER, S, exec, flameshot gui
 # █░▀░█ █ ▄█ █▄▄
 bind = SUPER SHIFT, L, exec, swaylock
 bind = SUPER, Return, exec, alacritty
-bind = SUPER, F, exec, wofi --show drun -I -m -i
+bind = SUPER, F, exec, wofi --show drun -I -m -i -s ~/.config/wofi/style.css
 bind = SUPER, C, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind = SUPER, period, exec, wofi-emoji
 #bind = SUPER, D, exec, killall rofi || rofi -show drun -theme ~/.config/rofi/global/rofi.rasi
