hypr - take finnish umlaut keys into use

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -187,10 +187,12 @@ binde = CTRL ALT, period, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █░▀░█ █▀█ █░▀█ █▀█ █▄█ █░▀░█ ██▄ █░▀█ ░█░
 bind = SUPER, ESCAPE, killactive,
 bind = SUPER SHIFT, ESCAPE, exit,
-bind = SUPER, F, fullscreen,
+# Ö key on Finnish keyboard
+bind = SUPER,code:47, fullscreen,
+# Ä key on Finnish keyboard
+bind = SUPER, code:48, togglesplit, # dwindle
 bind = SUPER, Space, togglefloating,
 bind = SUPER, -, pseudo, # dwindle
-bind = SUPER, B, togglesplit, # dwindle
 
 # █▀▀ █▀█ █▀▀ █░█ █▀
 # █▀░ █▄█ █▄▄ █▄█ ▄█
