update hyprland configs and related tooling

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,8 @@ exec-once = systemctl --user restart pipewire
 #exec-once = gBar bar 0
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-exec-once = hyprpaper
+exec-once = swww init
+exec-once = swww img /home/joakim/.config/wallpapers/main.jpg
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
@@ -23,7 +24,7 @@ monitor = DP-1,2560x1440@144,0x0,1
 input {
   kb_layout = fi
   repeat_rate = 35
-  repeat_delay = 200
+  repeat_delay = 250
   follow_mouse = 0
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
@@ -155,6 +156,7 @@ windowrule = size 800 600, title:^(Volume Control)$
 windowrule = move 75 44%, title:^(Volume Control)$
 windowrule = opacity 0.92, Thunar
 windowrule = float, title:^(JW personal notifications)$
+windowrule = fullscreen, title:^(Empyrion - Galactic Survival)$
 layerrule =  noanim, wofi
 
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄
@@ -172,7 +174,7 @@ bind = SUPER, S, exec, flameshot gui
 # █░▀░█ █ ▄█ █▄▄
 bind = SUPER SHIFT, L, exec, swaylock
 bind = SUPER, Return, exec, alacritty
-bind = SUPER, F, exec, wofi --show drun -I -m -i -s ~/.config/wofi/style.css
+bind = SUPER, F, exec, tofi-drun --drun-launch=true
 bind = SUPER, C, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind = SUPER, period, exec, wofi-emoji
 #bind = SUPER, D, exec, killall rofi || rofi -show drun -theme ~/.config/rofi/global/rofi.rasi
