--- a/sway/config
+++ b/sway/config
@@ -16,7 +16,7 @@ set $term alacritty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu dmenu_path | dmenu | xargs swaymsg exec --
+set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
 
 # Nvidia fixes
 # exec WLR_RENDERER vulkan
@@ -55,8 +55,6 @@ input "type:keyboard" {
     repeat_rate 35
 }
 
-#
-#
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
@@ -100,27 +98,14 @@ input "type:keyboard" {
 # Moving around:
 #
     # Move your focus around
-    # bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    # bindsym $mod+$right focus right
-
-    # Or use $mod+[up|down|left|right]
-    # bindsym $mod+Left focus left
-    # bindsym $mod+Down focus down
-    # bindsym $mod+Up focus up
-    # bindsym $mod+Right focus right
+    bindsym $mod+$down focus left
+    bindsym $mod+$up focus right
 
     # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
-    # bindsym $mod+Shift+Left move left
-    # bindsym $mod+Shift+Down move down
-    # bindsym $mod+Shift+Up move up
-    # bindsym $mod+Shift+Right move right
+    # bindsym $mod+Shift+$left move left
+    # bindsym $mod+Shift+$down move down
+    # bindsym $mod+Shift+$up move up
+    # bindsym $mod+Shift+$right move right
 #
 # Workspaces:
 #
@@ -160,6 +145,7 @@ input "type:keyboard" {
     # Switch the current container between different layout styles
     # bindsym $mod+s layout stacking
     # bindsym $mod+w layout tabbed
+
     # Ä key on Finnish keyboard
     bindcode $mod+48 layout toggle split
 
@@ -189,30 +175,11 @@ input "type:keyboard" {
 #
 # Resizing containers:
 #
-mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
-    bindsym $left resize shrink width 10px
-    bindsym $down resize grow height 10px
-    bindsym $up resize shrink height 10px
-    bindsym $right resize grow width 10px
-
-    # Ditto, with arrow keys
-    bindsym Left resize shrink width 10px
-    bindsym Down resize grow height 10px
-    bindsym Up resize shrink height 10px
-    bindsym Right resize grow width 10px
-
-    # Return to default mode
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-# bindsym $mod+r mode "resize"
+bindsym $mod+$left resize shrink width 10px
+bindsym $mod+$right resize grow width 10px
 
 # Gaps
-# gaps inner 2
+gaps inner 2
 
 #
 # Status Bar:
