sway add keyboard layout manual command

--- a/sway/config
+++ b/sway/config
@@ -48,6 +48,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 ### Input configuration
+# To immediately set keyboard layout without a config, use this terminal command:
+# swaymsg input type:keyboard xkb_layout "fi"
 
 input "type:keyboard" {
     xkb_layout fi
