--- a/sway/config
+++ b/sway/config
@@ -13,6 +13,8 @@ set $up k
 set $right l
 # Your preferred terminal emulator
 set $term alacritty
+set $rofi_cmd rofi \
+        -terminal '$term'
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -26,7 +28,7 @@ set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg /usr/share/backgrounds/default.png fill
 #
 # Example configuration:
 #
@@ -123,16 +125,16 @@ input "type:keyboard" {
     bindsym $mod+o workspace number 9
     bindsym $mod+p workspace number 10
     # Move focused container to workspace
-    bindsym $mod+Shift+q move container to workspace number 1
-    bindsym $mod+Shift+w move container to workspace number 2
-    bindsym $mod+Shift+e move container to workspace number 3
-    bindsym $mod+Shift+r move container to workspace number 4
-    bindsym $mod+Shift+t move container to workspace number 5
-    bindsym $mod+Shift+y move container to workspace number 6
-    bindsym $mod+Shift+u move container to workspace number 7
-    bindsym $mod+Shift+i move container to workspace number 8
-    bindsym $mod+Shift+o move container to workspace number 9
-    bindsym $mod+Shift+p move container to workspace number 10
+    bindsym $mod+Shift+q move container to workspace number 1, workspace number 1
+    bindsym $mod+Shift+w move container to workspace number 2, workspace number 2
+    bindsym $mod+Shift+e move container to workspace number 3, workspace number 3
+    bindsym $mod+Shift+r move container to workspace number 4, workspace number 4
+    bindsym $mod+Shift+t move container to workspace number 5, workspace number 5
+    bindsym $mod+Shift+y move container to workspace number 6, workspace number 6
+    bindsym $mod+Shift+u move container to workspace number 7, workspace number 7
+    bindsym $mod+Shift+i move container to workspace number 8, workspace number 8
+    bindsym $mod+Shift+o move container to workspace number 9, workspace number 9
+    bindsym $mod+Shift+p move container to workspace number 10, workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
@@ -177,28 +179,28 @@ input "type:keyboard" {
 #
 # Resizing containers:
 #
-bindsym $mod+$left resize shrink width 10px
-bindsym $mod+$right resize grow width 10px
+bindsym $mod+$right resize shrink width 10px
+bindsym $mod+$left resize grow width 10px
 
-# Gaps
-gaps inner 2
+# Borders
+smart_borders on
+default_border pixel 2
+default_floating_border none
 
-#
 # Status Bar:
-#
 # Read `man 5 sway-bar` for more information about this section.
-bar {
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
-
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
-}
+# bar {
+#     position top
+#
+#     # When the status_command prints a new line to stdout, swaybar updates.
+#     # The default just shows the current date and time.
+#     status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
+#
+#     colors {
+#         statusline #ffffff
+#         background #323232
+#         inactive_workspace #32323200 #32323200 #5c5c5c
+#     }
+# }
 
 include /etc/sway/config.d/*
