--- a/sway/config
+++ b/sway/config
@@ -33,6 +33,8 @@ output * bg /usr/share/backgrounds/default.png fill
 # Example configuration:
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
+output DP-1 resolution 2560x1440 position 0,0
+output eDP-1 resolution 1920x1080 position 320,1440
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -92,7 +94,8 @@ input "type:keyboard" {
     bindsym $mod+a exec ~/scripts/notification_dash.sh | python ~/scripts/jwqtnotify.py
 
     # Start screenshot application
-    bindsym $mod+s exec flameshot gui
+    # bindsym $mod+s exec flameshot gui
+    bindsym $mod+s exec grim -g "$(slurp)" - | swappy -f -
 
     # Volume control
     bindsym Ctrl+Alt+Comma exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 3%+
@@ -203,4 +206,10 @@ default_floating_border none
 #     }
 # }
 
+# Window rules
+for_window {
+    [title="^JW.personal.notifications$"] floating enable
+}
+
 include /etc/sway/config.d/*
+
