sway hard code most workspaces to DP-1

--- a/sway/config
+++ b/sway/config
@@ -116,6 +116,17 @@ input "type:keyboard" {
 #
 # Workspaces:
 #
+    # Assign workspaces to outputs
+    workspace 1 output DP-1
+    workspace 2 output DP-1
+    workspace 3 output DP-1
+    workspace 4 output DP-1
+    workspace 5 output DP-1
+    workspace 6 output DP-1
+    workspace 7 output DP-1
+    workspace 8 output DP-1
+    workspace 9 output DP-1
+    workspace 10 output eDP-1
     # Switch to workspace
     bindsym $mod+q workspace number 1
     bindsym $mod+w workspace number 2
@@ -212,4 +223,3 @@ for_window {
 }
 
 include /etc/sway/config.d/*
-
