--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,6 +12,7 @@ exec-once = systemctl --user restart pipewire
 #exec-once = gBar bar 0
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+# exec-once = swaybg -m fill -i /home/joakim/.config/wallpapers/main.jpg
 exec-once = swww init
 exec-once = swww img /home/joakim/.config/wallpapers/main.jpg
 
@@ -73,10 +74,9 @@ decoration {
 
   # █▄▄ █░░ █░█ █▀█
   # █▄█ █▄▄ █▄█ █▀▄
-  blur = false
-  blur_size = 3
-  blur_passes = 3
-  blur_new_optimizations = true
+  # blur = false
+  # blur_size = 3
+  # blur_passes = 3
 
 
   # █▀ █░█ ▄▀█ █▀▄ █▀█ █░█░█
@@ -224,7 +224,7 @@ bind= SUPER, tab, changegroupactive
 
 # █▀ █▀█ █▀▀ █▀▀ █ ▄▀█ █░░
 # ▄█ █▀▀ ██▄ █▄▄ █ █▀█ █▄▄
-bind = SUPER, a, togglespecialworkspace
+# bind = SUPER, a, togglespecialworkspace
 bind = SUPERSHIFT, a, movetoworkspace, special
 bind = SUPER, n, exec, hyprctl dispatch centerwindow
 
