hyrpland - fix breaking change and update

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,7 +5,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = echo fi > /tmp/kb_layout
-exec-once = wlsunset -t 4500 -S 8:00 -s 19:30
+exec-once = wlsunset -t 4500 -S 8:00 -s 17:30
 exec-once = ~/.autostart
 exec-once = systemctl --user restart pipewire
 # exec-once = waybar
@@ -28,6 +28,7 @@ input {
   repeat_delay = 250
   follow_mouse = 0
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+  force_no_accel
 }
 
 # █▀▀ █▀▀ █▄░█ █▀▀ █▀█ ▄▀█ █░░
@@ -65,7 +66,6 @@ decoration {
   # █▀█ █▀█ █░█ █▄░█ █▀▄   █▀▀ █▀█ █▀█ █▄░█ █▀▀ █▀█
   # █▀▄ █▄█ █▄█ █░▀█ █▄▀   █▄▄ █▄█ █▀▄ █░▀█ ██▄ █▀▄
   rounding = 0
-  multisample_edges = true
 
   # █▀█ █▀█ ▄▀█ █▀▀ █ ▀█▀ █▄█
   # █▄█ █▀▀ █▀█ █▄▄ █ ░█░ ░█░
