--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-nvim/autoload/
-nvim/sessions/
-nvim/plugin/
-nvim/lazy-lock.json
-nushell/history.txt
-nushell/nupm
-nushell/plugin.nu
+.config/nvim/autoload/
+.config/nvim/sessions/
+.config/nvim/plugin/
+.config/nvim/lazy-lock.json
+.config/nushell/history.txt
+.config/nushell/nupm
+.config/nushell/plugin.nu
