--- a/.config/sway/config
+++ b/.config/sway/config
@@ -118,14 +118,23 @@ input "type:keyboard" {
 #
     # Assign workspaces to outputs
     workspace 1 output DP-1
+    workspace 1 output HDMI-A-1
     workspace 2 output DP-1
+    workspace 2 output HDMI-A-1
     workspace 3 output DP-1
+    workspace 3 output HDMI-A-1
     workspace 4 output DP-1
+    workspace 4 output HDMI-A-1
     workspace 5 output DP-1
+    workspace 5 output HDMI-A-1
     workspace 6 output DP-1
+    workspace 6 output HDMI-A-1
     workspace 7 output DP-1
+    workspace 7 output HDMI-A-1
     workspace 8 output DP-1
+    workspace 8 output HDMI-A-1
     workspace 9 output DP-1
+    workspace 9 output HDMI-A-1
     workspace 10 output eDP-1
     # Switch to workspace
     bindsym $mod+q workspace number 1
