hyprland - force_no_accel true

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ input {
   repeat_delay = 250
   follow_mouse = 0
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-  force_no_accel
+  force_no_accel = true
 }
 
 # █▀▀ █▀▀ █▄░█ █▀▀ █▀█ ▄▀█ █░░
