hyprland - preliminary commented tearing
Won't work yet but can try commenting out once a month to
see when it starts working

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,6 +42,7 @@ general {
   no_border_on_floating = false
   layout = dwindle
   no_cursor_warps = true
+  # allow_tearing = true
 }
 
 # █▀▄▀█ █ █▀ █▀▀
@@ -157,6 +158,7 @@ windowrule = move 75 44%, title:^(Volume Control)$
 windowrule = opacity 0.92, Thunar
 windowrule = float, title:^(JW personal notifications)$
 windowrule = fullscreen, title:^(Empyrion - Galactic Survival)$
+# windowrulev2 = immediate, class:^(cs2)$
 layerrule =  noanim, wofi
 
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄
