--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -81,12 +81,13 @@ decoration {
 
   # █▀ █░█ ▄▀█ █▀▄ █▀█ █░█░█
   # ▄█ █▀█ █▀█ █▄▀ █▄█ ▀▄▀▄▀
-  drop_shadow = false
-  shadow_ignore_window = true
-  shadow_offset = 1 2
-  shadow_range = 10
-  shadow_render_power = 2
-  col.shadow = 0x66404040
+  shadow {
+    ignore_window = true
+    offset = 1 2
+    range = 10
+    render_power = 2
+    color = 0x66404040
+  }
 
   #blurls = gtk-layer-shell
   # blurls = waybar
@@ -117,7 +118,6 @@ animations {
 # █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
 
 dwindle {
-  no_gaps_when_only = true
   pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
   preserve_split = true # you probably want this
 }
@@ -154,7 +154,6 @@ windowrule = float, title:^(Volume Control)$
 windowrule = float, title:^(Picture-in-Picture)$
 windowrule = size 800 600, title:^(Volume Control)$
 windowrule = move 75 44%, title:^(Volume Control)$
-windowrule = opacity 0.92, Thunar
 windowrule = float, title:^(JW personal notifications)$
 windowrule = fullscreen, title:^(Empyrion - Galactic Survival)$
 # windowrulev2 = immediate, class:^(cs2)$
