hypr - window rule updates and rename qtnotify

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,7 +18,8 @@ exec-once = swww img /home/joakim/.config/wallpapers/main.jpg
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
-monitor = DP-1,2560x1440@144,0x0,1
+monitor = DP-3,2560x1440@144,0x0,1
+# monitor = DP-3,1920x1080@144,0x0,1
 
 # █ █▄░█ █▀█ █░█ ▀█▀
 # █ █░▀█ █▀▀ █▄█ ░█░
@@ -167,8 +168,8 @@ windowrule = float, title:^(Volume Control)$
 windowrule = float, title:^(Picture-in-Picture)$
 windowrule = size 800 600, title:^(Volume Control)$
 windowrule = move 75 44%, title:^(Volume Control)$
-windowrule = float, title:^(JW personal notifications)$
-windowrule = fullscreen, title:^(Empyrion - Galactic Survival)$
+windowrulev2 = float, title:jw_personal_notifications
+windowrulev2 = fullscreen, title:^(Empyrion - Galactic Survival)$
 # windowrulev2 = immediate, class:^(cs2)$
 layerrule =  noanim, wofi
 
