--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -169,7 +169,7 @@ windowrule = float, title:^(Picture-in-Picture)$
 windowrule = size 800 600, title:^(Volume Control)$
 windowrule = move 75 44%, title:^(Volume Control)$
 windowrulev2 = float, title:jw_personal_notifications
-windowrulev2 = fullscreen, title:^(Empyrion - Galactic Survival)$
+windowrule = fullscreen, title:^(Empyrion - Galactic Survival)$
 # windowrulev2 = immediate, class:^(cs2)$
 layerrule =  noanim, wofi
 
@@ -212,10 +212,10 @@ bind = SUPER, -, pseudo, # dwindle
 
 # █▀▀ █▀█ █▀▀ █░█ █▀
 # █▀░ █▄█ █▄▄ █▄█ ▄█
-# bind = SUPER, h, movefocus, l
-# bind = SUPER, l, movefocus, r
-bind = SUPER, k, movefocus, u
-bind = SUPER, j, movefocus, d
+bind = SUPER, j, movefocus, l
+bind = SUPER, k, movefocus, r
+# bind = SUPER, k, movefocus, u
+# bind = SUPER, j, movefocus, d
 
 # █▀▄▀█ █▀█ █░█ █▀▀
 # █░▀░█ █▄█ ▀▄▀ ██▄
